# ctx

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  SECURITY.md  rust_sources.bzl
.buildkite/: pipeline.yml
contracts/agent-history-v1/: schema.json
contracts/agent-history-v1/fixtures/: show-event.window.json  sources.available.json
crates/ctx-cli/: BUILD.bazel  Cargo.toml  build.rs
crates/ctx-cli/src/: analytics.rs  docs.rs  execution_capabilities.rs  history_source_plugins.rs  identity.rs  main.rs  mcp.rs  output.rs  provider_sources.rs  transcript.rs
crates/ctx-cli/src/commands/: import.rs  search.rs  setup.rs  sql.rs  status.rs
crates/ctx-cli/src/commands/import/: catalog.rs  explicit.rs  inventory.rs  native.rs  native_tests.rs  report.rs  requests.rs
crates/ctx-cli/src/semantic/: ort_runtime.rs  preamble.rs
crates/ctx-cli/src/upgrade/: install.rs
crates/ctx-cli/tests/: analytics.rs  cli.rs  cli_public_help_docs.rs  mcp.rs  native_providers.rs  search_refresh.rs  search_show_locate_sql.rs  setup_sources_import.rs
crates/ctx-cli/tests/support/: analytics.rs  assertions.rs  fixtures.rs  runner.rs
crates/ctx-history-capture/: BUILD.bazel  Cargo.toml
crates/ctx-history-capture/src/: lib.rs  options.rs  provider_sources.rs  summaries.rs  test_support_paths.rs
crates/ctx-history-capture/src/common/: io.rs  json.rs
crates/ctx-history-capture/src/provider/: adapter.rs  api.rs  custom_history_jsonl.rs  file_touches.rs  importer.rs  mod.rs  native.rs  sqlite.rs
crates/ctx-history-capture/src/provider/adapter_impls/: fixture.rs  json.rs
crates/ctx-history-capture/src/provider/api/: json_sources.rs  native_streams.rs  sqlite_sources.rs
crates/ctx-history-capture/src/provider/codex/: catalog.rs  events.rs  fast_import.rs  history.rs  session.rs
crates/ctx-history-capture/src/provider/importer/: cursors.rs
crates/ctx-history-capture/src/provider/providers/: astrbot.rs  claude.rs  codebuddy.rs  continue_cli.rs  deepagents.rs  forgecode.rs  junie.rs  kimi.rs  lingma.rs  mistral_vibe.rs  mux.rs  nanoclaw.rs  native_jsonl.rs  openclaw.rs  opencode.rs  openhands.rs  pi.rs  rovodev.rs  task_json.rs  trae.rs  warp.rs
crates/ctx-history-capture/src/provider/providers/native_jsonl/: windsurf.rs
crates/ctx-history-capture/src/provider_sources/: discovery.rs  probes.rs  specs.rs  types.rs
crates/ctx-history-capture/src/provider_sources/tests/: default_discovery.rs  support.rs
crates/ctx-history-capture/src/tests/: codex.rs  custom_history.rs  native_json.rs  native_providers.rs  native_real_shapes.rs  native_sqlite.rs  provider_fixture.rs  spool_provider.rs  support.rs
crates/ctx-history-capture/tests/: cursor_native.rs
crates/ctx-history-core/: BUILD.bazel  Cargo.toml
crates/ctx-history-core/src/: dtos.rs  history_jsonl.rs  lib.rs  provider.rs  sync.rs  tests.rs
crates/ctx-history-search/: BUILD.bazel  Cargo.toml
crates/ctx-history-search/src/: lib.rs  snippets.rs
crates/ctx-history-search/src/tests/: fast_path.rs  filter_scans.rs  mod.rs  perf.rs  rich.rs  snippets.rs  source_metadata.rs
crates/ctx-history-store/: BUILD.bazel  Cargo.toml
crates/ctx-history-store/src/: artifacts.rs  catalog.rs  events.rs  lib.rs  records.rs
crates/ctx-history-store/src/archive/: import.rs  tests.rs
crates/ctx-history-store/src/catalog/: tests.rs
crates/ctx-history-store/src/schema/: ddl.rs  fts.rs  indexes.rs  migrations.rs  mod.rs  rebuild.rs  tests.rs  views.rs
crates/ctx-history-store/src/search/: projections.rs  tests.rs
crates/ctx-protocol/: BUILD.bazel
crates/ctx-protocol/src/: lib.rs
crates/ctx-sdk/: BUILD.bazel
docs/: agent-usage.md  cli-reference.md  custom-history-import-format.md  docs.md  first-10-minutes.md  getting-started.md  history-source-plugins.md  limitations.md  product-contract.md  provider-adapter-api.md  provider-import-policy.md  provider-support-matrix.json  provider-support.md  providers.md  redaction-corpus.md  search.md  security-checks.md  sql.md  storage.md  troubleshooting.md  unmanaged-installs.md
docs/contracts/: json.md
plugins/ctx-agent-history-search/skills/ctx-agent-history-search/: SKILL.md
scripts/: apple-developer-id-g2-ca.pem  attest-macos-runtime-release-archive.sh  audit-search-mvp-package.sh  bazel-native-ctx-smoke.sh  bazel-test.sh  build-onnxruntime-sidecar.sh  build-public-cli-artifact.sh  check-buildkite-pipeline.sh  check-docs.sh  check-loc-exceptions.tsv  check-macos-release-signing.sh  check-macos-signing-trusted-ref.sh  check-provider-support-matrix.py  check-public-cli-artifact.sh  check-release-binary-compat.sh  install.ps1  macos-release-signing-evidence.py  public-cli-host-runtime-evidence.sh  run-macos-release-signing.sh  run-native-candidate-smoke.ps1  run-native-candidate-smoke.sh  sign-notarize-macos-release-artifact.sh  smoke-daemon-semantic-release.ps1  smoke-daemon-semantic-release.sh  stage-github-release-assets.sh  test-linux-release-construction.sh  test-windows-runtime-upgrade-extractor.ps1  test-windows-semantic-smoke-contract.ps1  verify-macos-quarantined-cli.sh  verify-macos-release-attestation.sh
scripts/buildkite/: macos_agent_pre_command.sh
scripts/tests/: check-release-binary-compat-test.sh  macos-release-signing-test.sh  run-native-candidate-smoke-test.ps1  run-native-candidate-smoke-test.sh  smoke-daemon-semantic-release-test.sh
sdks/dotnet/src/Ctx.AgentHistory/: Responses.cs
sdks/go/: types.go
sdks/go/examples/dogfood/: main.go
sdks/python/src/ctx_agent_history/: transport.py  types.py
sdks/python/tests/: test_client.py
sdks/swift/Examples/LocalAgentHistorySmoke/: main.swift
sdks/swift/Sources/CtxAgentHistory/: AgentHistoryDTOs.swift
sdks/swift/Tests/CtxAgentHistoryTests/: CtxAgentHistoryTests.swift
sdks/typescript/src/: index.d.ts
tests/fixtures/provider-history/: pi-session.jsonl
tests/fixtures/provider-history/antigravity/v1/: README.md
tests/fixtures/provider-history/forgecode/v1/: forge.db
tests/fixtures/provider-history/tabnine-cli/: README.md
tests/fixtures/provider-history/trae/: README.md
(+21 files in other folders)
