load("@crates//:defs.bzl", "aliases", "all_crate_deps", "crate_edition")
load("@rules_rust//cargo:defs.bzl", "cargo_toml_env_vars")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("//:rust_sources.bzl", "RUST_PROD_SRC_EXCLUDES")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

filegroup(
    name = "cargo_package_data",
    srcs = glob(["**"], exclude = ["BUILD.bazel"]),
)

cargo_toml_env_vars(
    name = "cargo_toml_env_vars",
    src = "Cargo.toml",
)

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "crates/ctx-cli",
}

CTX_CLI_DEPS = [
    "//crates/ctx-history-capture:lib",
    "//crates/ctx-history-core:lib",
    "//crates/ctx-history-search:lib",
    "//crates/ctx-history-store:lib",
]

CTX_CLI_COMPILE_DATA = [
    "//:ctx_bundled_skills",
    "//:ctx_embedded_docs",
]

RUST_SRCS = glob(["src/**/*.rs"])

PROD_SRCS = glob(
    ["src/**/*.rs"],
    exclude = RUST_PROD_SRC_EXCLUDES,
)

rust_binary(
    name = "ctx",
    srcs = PROD_SRCS,
    crate_name = "ctx",
    crate_root = "src/main.rs",
    edition = crate_edition(),
    aliases = aliases(),
    compile_data = CTX_CLI_COMPILE_DATA,
    deps = all_crate_deps(normal = True) + CTX_CLI_DEPS,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = COMMON_RUSTC_ENV,
    rustc_env_files = [":cargo_toml_env_vars"],
)

rust_test(
    name = "unit_tests",
    srcs = RUST_SRCS,
    crate_name = "ctx",
    crate_root = "src/main.rs",
    edition = crate_edition(),
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    compile_data = CTX_CLI_COMPILE_DATA,
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + CTX_CLI_DEPS,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = COMMON_RUSTC_ENV,
    rustc_env_files = [":cargo_toml_env_vars"],
)
