load("@crates//:defs.bzl", "aliases", "all_crate_deps", "crate_edition")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:rust_sources.bzl", "RUST_PROD_SRC_EXCLUDES")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cargo_package_data",
    srcs = glob(["**"], exclude = ["BUILD.bazel"]),
)

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "crates/ctx-history-capture",
}

RUST_SRCS = glob(["src/**/*.rs"])

PROD_SRCS = glob(
    ["src/**/*.rs"],
    exclude = RUST_PROD_SRC_EXCLUDES,
)

CTX_HISTORY_CAPTURE_DEPS = [
    "//crates/ctx-history-core:lib",
    "//crates/ctx-history-store:lib",
]

rust_library(
    name = "lib",
    srcs = PROD_SRCS,
    crate_name = "ctx_history_capture",
    crate_root = "src/lib.rs",
    edition = crate_edition(),
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + CTX_HISTORY_CAPTURE_DEPS,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = COMMON_RUSTC_ENV,
)

rust_test(
    name = "unit_tests",
    srcs = RUST_SRCS,
    crate_name = "ctx_history_capture",
    crate_root = "src/lib.rs",
    edition = crate_edition(),
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    data = [
        "//:public_test_fixtures",
    ],
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + CTX_HISTORY_CAPTURE_DEPS,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = COMMON_RUSTC_ENV,
)

rust_test(
    name = "cursor_native_tests",
    srcs = ["tests/cursor_native.rs"],
    crate_root = "tests/cursor_native.rs",
    edition = crate_edition(),
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    data = [
        "//:public_test_fixtures",
    ],
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + [
        ":lib",
        "//crates/ctx-history-store:lib",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = COMMON_RUSTC_ENV,
)
