load("@crates//:defs.bzl", "aliases", "all_crate_deps", "crate_edition")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:rust_sources.bzl", "RUST_PROD_SRC_EXCLUDES")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cargo_package_data",
    srcs = glob(["**"], exclude = ["BUILD.bazel"]),
)

RUST_SRCS = glob(["src/**/*.rs"])

PROD_SRCS = glob(
    ["src/**/*.rs"],
    exclude = RUST_PROD_SRC_EXCLUDES,
)

CTX_HISTORY_STORE_DEPS = [
    "//crates/ctx-history-core:lib",
]

rust_library(
    name = "lib",
    srcs = PROD_SRCS,
    crate_name = "ctx_history_store",
    crate_root = "src/lib.rs",
    edition = crate_edition(),
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + CTX_HISTORY_STORE_DEPS,
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "unit_tests",
    srcs = RUST_SRCS,
    crate_name = "ctx_history_store",
    crate_root = "src/lib.rs",
    edition = crate_edition(),
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + CTX_HISTORY_STORE_DEPS,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)
